Fix typo in notebook title from 'Enrega' to 'Entrega'

--- a/01 - exploración.ipynb
+++ b/01 - exploración.ipynb
@@ -5,7 +5,7 @@
    "id": "2f8d9212",
    "metadata": {},
    "source": [
-    "# 01 — Enrega\n",
+    "# 01 — Entrega\n",
     "\n",
     "**Objetivo:** solo cargar datos y producir graficos \n",
     "\n",
